# GDK backends

option('x11-backend',
       type: 'boolean',
       value: true,
       description : 'Enable the X11 gdk backend (only when building on Unix)')

option('wayland-backend',
       type: 'boolean',
       value: true,
       description : 'Enable the wayland gdk backend (only when building on Unix except for macOS)')

option('broadway-backend',
       type: 'boolean',
       value: false,
       description : 'Enable the broadway (HTML5) gdk backend')

option('win32-backend',
       type: 'boolean',
       value: true,
       description : 'Enable the Windows gdk backend (only when building on Windows)')

option('macos-backend',
       type: 'boolean',
       value: true,
       description : 'Enable the macOS gdk backend (only when building on macOS)')

# Media backends

option('media-ffmpeg',
       type: 'feature',
       value: 'auto',
       description : 'Build the ffmpeg media backend')

option('media-gstreamer',
       type: 'feature',
       value: 'auto',
       description : 'Build the gstreamer media backend')

# Print backends

option('print-cups',
       type: 'feature',
       value: 'auto',
       description : 'Build the cups print backend')

option('print-cloudprint',
       type: 'feature',
       value: 'auto',
       description : 'Build the cloudprint print backend')

# Optional features

option('vulkan',
       type: 'feature',
       value: 'auto',
       description : 'Enable support for the Vulkan graphics API')

option('xinerama',
       type: 'feature',
       value: 'auto',
       description : 'Enable support for the X11 Xinerama extension')

option('cloudproviders',
       type: 'feature',
       value: 'disabled',
       description : 'Enable the cloudproviders support')

option('sysprof',
       type: 'feature',
       value: 'disabled',
       description : 'include tracing support for sysprof')

option('tracker',
       type: 'feature',
       value: 'disabled',
       description : 'Enable Tracker3 filechooser search')

option('colord',
       type: 'feature',
       value: 'disabled',
       description : 'Build colord support for the CUPS printing backend')

option('sassc',
       type: 'feature',
       value: 'auto',
       description: 'Rebuild themes using sassc')

option('f16c',
       type: 'feature',
       value: 'enabled',
       description: 'Enable F16C fast paths (requires F16C)')

# Documentation and introspection

option('gtk_doc',
       type: 'boolean',
       value: 'false',
       description : 'Build API reference and tools documentation')

option('man-pages',
       type: 'boolean',
       value: 'false',
       description : 'Build man pages for installed tools')

option('introspection',
       type: 'feature',
       value: 'auto',
       yield: true,
       description : 'Build introspection data (requires gobject-introspection)')

# Demos, examples and tests

option('demos',
       type: 'boolean',
       value: 'true',
       description : 'Build demo programs')

option('profile',
       type: 'combo',
       choices: [ 'default', 'devel' ],
       value: 'default',
       description : 'Profile to use for demos')

option('build-examples',
       type: 'boolean',
       value: 'true',
       description : 'Build examples')

option('build-tests',
       type: 'boolean',
       value: 'true',
       description : 'Build tests')

option('install-tests',
       type: 'boolean',
       value: 'false',
       description : 'Install tests')
